--- a/frontend/src/components/navigation/SignUpButton.module.scss
+++ b/frontend/src/components/navigation/SignUpButton.module.scss
@@ -10,5 +10,6 @@
 
   @media screen and #{$mq-md} {
     display: inline;
+    color: inherit;
   }
 }
